Fixed issues with printing on firefox related to css quirks; removed photo from resume when not in print mode

--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ ul, li {
 	margin-top: 0;
 }
 
-.print-only, .hidden {
+.print-only, .hidden, .print-only-table-row {
 	display: none;
 }
 
@@ -136,7 +136,10 @@ ul, li {
 
 @media print {
 	.print-only {
-		display: initial;
+		display: unset;
+	}
+	.print-only-table-row {
+		display: table-row;
 	}
 	.screen-only {
 		display: none;
